tests/cases/compiler-development/artifact/errors/diagnostic-ffi-extern-varargs-aggregate.diagnostic
diagnostic error code=A0001 family=abi message="C variadic argument type is not supported: (i64, i64)" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/ffi/errors/extern-varargs-aggregate.ari" display="tests/cases/ffi/errors/extern-varargs-aggregate.ari" bytes=131
  Label index=0 role=primary source_id=0 source="tests/cases/ffi/errors/extern-varargs-aggregate.ari" line=5 column=18 end_line=5 end_column=22 byte_start=110 byte_end=114 message=""
  Snippet label=0 text="  --> tests/cases/ffi/errors/extern-varargs-aggregate.ari:5:18\n   |\n 5 |   printf(\"%lld\", pair);\n   |                  ^^^^"
